# uraeus

./: .gitignore  Cargo.toml  README.md  build.rs
.git_hooks/: pre-commit  pre-push
.github/workflows/: main.yaml
app/: .gitignore  package-lock.json  package.json  svelte.config.js
app/src/: app.css
app/src/lib/stores/: contract.js  sources.js
app/src/routes/: __layout.svelte  index.svelte
examples/starknet/protostar/gm/: protostar.toml
examples/starknet/protostar/gm/src/: main.cairo
scripts/: install_git_hooks.sh  setup.sh
src/: cli.rs  compiler.rs  lib.rs  main.rs  starknet.rs  web.rs
src/cli/: model.rs  term.rs  ui.rs  verify.rs  web.rs
src/compiler/: protostar.rs
