[package]
name = "uraeus"
authors = [ "Abdelhamid Bakhta <abdelhamid.bakhta@gmail.com>" ]
version = "0.1.0"
edition = "2021"
description = "Command line utilities to check StarkNet contracts written in Cairo."
homepage = "https://github.com/onlydustxyz/uraeus"
repository = "https://github.com/onlydustxyz/uraeus"
readme = "README.md"
keywords = [ "terminal", "system", "starknet" ]
categories = ["command-line-utilities"]
license-file = "LICENSE"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.2"
env_logger = "0.9.0"
log = "0.4.17"