[package]
authors      = ["Abdelhamid Bakhta <abdelhamid.bakhta@gmail.com>"]
categories   = ["command-line-utilities"]
description  = "Command line utilities to check StarkNet contracts written in Cairo."
edition      = "2021"
homepage     = "https://github.com/onlydustxyz/uraeus"
keywords     = ["terminal", "system", "starknet"]
license-file = "LICENSE"
name         = "uraeus"
readme       = "README.md"
repository   = "https://github.com/onlydustxyz/uraeus"
version      = "0.1.2"

[build-dependencies]
execute    = "0.2.11"
exitcode   = "1.1.2"

[dependencies]
actix-cors = "0.6.1"
actix-web  = "4"
anyhow     = "1.0.57"
clap       = { version = "3.1.18", features = ["derive"] }
crossterm  = "0.23.2"
env_logger = "0.9.0"
execute    = "0.2.11"
glob       = "0.3.0"
log        = "0.4.17"
mime_guess = "2.0.4"
open       = "3.0.1"
rust-embed = "6.4.0"
serde      = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
